Fixed navbar index order and display collapsed on page load. :gear:

--- a/styles/sass/_navbar.scss
+++ b/styles/sass/_navbar.scss
@@ -26,8 +26,12 @@
     right: 29px;
 }
 
-.navbar__input-check:checked + nav {
+.navbar__input-check + nav {
     display: none;
+}
+
+.navbar__input-check:checked + nav {
+    display: block;
 }
 
 .navbar__ul-menu a {
